--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -29,6 +29,8 @@
         "file://*/*"
       ],
       "js": [
+        "src/utils/logger.js",
+        "src/utils/storage.js",
         "src/content/nifi-api-client.js",
         "src/content/phi3-agent.js",
         "src/content/icons-manager.js",
