UI/UX: Align typography and iconography with Apache NiFi Flow Design System
- Update typography to use Roboto font family matching NiFi FDS specs
- Standardize font sizes: xs(10px), small(12px), base(13px), header(18px), large(20px)
- Replace emoji icons with Font Awesome icons following NiFi patterns
- Create comprehensive nifi-icons.css with Font Awesome mappings
- Update popup interface to use fa icons (fa-bars, fa-code, fa-align-left, fa-cog)
- Update chat-tab to use fa icons (fa-robot, fa-user-graduate, fa-paper-plane, etc.)
- Maintain fa icon compatibility as requested
- Add proper accessibility attributes and hover states
- Include icon size variants and color states matching NiFi theme
- Update manifest.json to include new icon stylesheet
- All changes follow Apache NiFi Flow Design System standards

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -44,6 +44,8 @@
         "src/content/content-script.js"
       ],
       "css": [
+        "src/content/nifi-theme.css",
+        "src/content/nifi-icons.css",
         "src/content/supertabs.css",
         "src/content/sidebar.css",
         "src/content/tabs.css",
