cleanup: remove unnecessary files and duplicates
- Remove temporary documentation files (ESTRUTURA-FINAL.txt, INSTALACAO-CORRIGIDA.txt, regras.txt, TESTE-POPUP-CONCLUIDO.md)
- Remove test HTML pages (test-flowfiles.html, test-page.html, test-phi4.html)
- Remove .playwright-mcp folder with test screenshots
- Remove duplicate tab files from extension/src/content/tabs/ folder
- Update manifest.json to reference correct file paths
- Keep only essential extension files for production

Result: Clean project structure with only necessary files for the SuperTabs Chrome Extension

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -35,9 +35,9 @@
         "src/content/phi4-agent.js",
         "src/content/icons-manager.js",
         "src/content/canvas-detector.js",
-        "src/content/tabs/info-tab.js",
-        "src/content/tabs/stats-tab.js",
-        "src/content/tabs/chat-tab.js",
+        "src/content/info-tab.js",
+        "src/content/stats-tab.js",
+        "src/content/chat-tab.js",
         "src/content/sidebar.js",
         "src/content/alignment-tool.js",
         "src/content/expression-language-generator.js",
