--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -61,18 +61,18 @@
     "default_popup": "src/popup/popup.html",
     "default_title": "SuperTabs - NiFi Assistant",
     "default_icon": {
-      "16": "icons/supertabs-icons.svg",
-      "32": "icons/supertabs-icons.svg",
-      "48": "icons/supertabs-icons.svg",
-      "128": "icons/supertabs-icons.svg"
+      "16": "icons/apache_nifi_logo_icon_168614.png",
+      "32": "icons/apache_nifi_logo_icon_168614.png",
+      "48": "icons/apache_nifi_logo_icon_168614.png",
+      "128": "icons/apache_nifi_logo_icon_168614.png"
     }
   },
   
   "icons": {
-    "16": "icons/supertabs-icons.svg",
-    "32": "icons/supertabs-icons.svg",
-    "48": "icons/supertabs-icons.svg",
-    "128": "icons/supertabs-icons.svg"
+    "16": "icons/apache_nifi_logo_icon_168614.png",
+    "32": "icons/apache_nifi_logo_icon_168614.png",
+    "48": "icons/apache_nifi_logo_icon_168614.png",
+    "128": "icons/apache_nifi_logo_icon_168614.png"
   },
   
   "options_page": "src/options/options.html",
